(include_subdirs unqualified)

; Copy architecture-specific SIMD module

(rule
 (enabled_if
  (= %{architecture} arm64))
 (targets simd.ml)
 (action (copy simd_neon.ml simd.ml)))

(rule
 (enabled_if
  (= %{architecture} amd64))
 (targets simd.ml)
 (action (copy simd_sse.ml simd.ml)))

(library
 (name nx_oxcaml)
  (foreign_stubs
  (language c)
  (names ba_stubs simd_stubs))
 (public_name nx-oxcaml)
 (modules
 (:standard \ simd_neon simd_sse))
 (libraries nx.core nx.buffer stdlib_stable stdlib_upstream_compatible))
