; Copy architecture-specific SIMD module and stubs

(rule
 (enabled_if
  (= %{architecture} arm64))
 (targets simd.ml stubs.c)
 (deps neon/simd.ml neon/stubs.c)
 (action
  (progn
   (copy neon/simd.ml simd.ml)
   (copy neon/stubs.c stubs.c))))

(rule
 (enabled_if
  (= %{architecture} amd64))
 (targets simd.ml stubs.c)
 (deps sse/simd.ml sse/stubs.c)
 (action
  (progn
   (copy sse/simd.ml simd.ml)
   (copy sse/stubs.c stubs.c))))

(library
 (name simd)
 (public_name nx-oxcaml.simd)
 (foreign_stubs
  (language c)
  (names stubs))
 (libraries stdlib_stable stdlib_upstream_compatible))
