(library
 (enabled_if
  (not
   (= %{ocaml-config:system} "macosx")))
 (name ndarray_cuda)
 (public_name rune.cuda.private)
 (libraries ndarray_core ndarray_c cuda cuda_kernels)
 (modules ndarray_cuda))

(rule
 (enabled_if
  (not
   (= %{ocaml-config:system} "macosx")))
 (targets ndarray.ml)
 (action
  (with-stdout-to
   ndarray.ml
   (run echo "include Ndarray_cuda"))))

(library
 (enabled_if
  (not
   (= %{ocaml-config:system} "macosx")))
 (name ndarray_cuda_impl)
 (libraries ndarray_cuda)
 (modules ndarray)
 (implements ndarray))
